--- a/blog.html
+++ b/blog.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
-    <title>Cyborg - Awesome HTML5 Template</title>
+  <title>Cyborg - Awesome HTML5 Template</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <!--
 
 TemplateMo 579 Cyborg Gaming
 
 https://templatemo.com/tm-579-cyborg-gaming
 
 -->
-  </head>
+</head>
 
 <body>
 
@@ -47,37 +48,38 @@ https://templatemo.com/tm-579-cyborg-gaming
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="">
-                    </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Search End ***** -->
-                    <div class="search-input">
-                      <form id="search" action="#">
-                        <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
-                        <i class="fa fa-search"></i>
-                      </form>
-                    </div>
-                    <!-- ***** Search End ***** -->
-                    <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
-                        <li><a href="details.html">Details</a></li>
-                        <li><a href="streams.html" class="active">Streams</a></li>
-                        <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
-                    </ul>   
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
-                    <!-- ***** Menu End ***** -->
-                </nav>
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">
+              <img src="assets/images/logoSneaker.png" alt="">
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Search End ***** -->
+            <div class="search-input">
+              <form id="search" action="#">
+                <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword"
+                  onkeypress="handle" />
+                <i class="fa fa-search"></i>
+              </form>
             </div>
+            <!-- ***** Search End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+              <li><a href="index.html" class="active">Trang chủ</a></li>
+              <li><a href="product.html">Sản phẩm</a></li>
+              <li><a href="collection.html">Bộ sưu tập</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="cart.html">Giỏ hàng </a></li>
+            </ul>
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Menu End ***** -->
+          </nav>
         </div>
+      </div>
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
@@ -184,7 +186,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <ul>
                   <li>
                     <span>01</span>
-                    <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/avatar-01.jpg" alt=""
+                      style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> LahutaM</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -192,7 +195,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </li>
                   <li>
                     <span>02</span>
-                    <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/avatar-02.jpg" alt=""
+                      style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Kengan</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -200,7 +204,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </li>
                   <li>
                     <span>03</span>
-                    <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/avatar-03.jpg" alt=""
+                      style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Areluwa</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -208,7 +213,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </li>
                   <li>
                     <span>04</span>
-                    <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/avatar-04.jpg" alt=""
+                      style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Omeg</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -216,7 +222,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </li>
                   <li>
                     <span>05</span>
-                    <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/avatar-01.jpg" alt=""
+                      style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> GangTeam</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -254,11 +261,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-01.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Kengan Omeg</span>
                     <h4>Just Talking With Fans</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -279,11 +287,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-02.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> LahutaMalc</span>
                     <h4>CS-GO 36 Hours Live Stream</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -304,11 +313,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-03.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Areluwa</span>
                     <h4>Maybe Nathej Allnight Chillin'</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -329,11 +339,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-04.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> NewGangTeam</span>
                     <h4>Live Streaming Till Morning</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -354,11 +365,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-01.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Kengan Omeg</span>
                     <h4>Just Talking With Fans</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -379,11 +391,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-02.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> LahutaMalc</span>
                     <h4>CS-GO 36 Hours Live Stream</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -404,11 +417,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-03.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Areluwa</span>
                     <h4>Maybe Nathej Allnight Chillin'</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
@@ -429,11 +443,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/avatar-04.jpg" alt=""
+                        style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> NewGangTeam</span>
                     <h4>Live Streaming Till Morning</h4>
-                  </div> 
+                  </div>
                 </div>
               </div>
               <div class="col-lg-12">
@@ -449,14 +464,16 @@ https://templatemo.com/tm-579-cyborg-gaming
       </div>
     </div>
   </div>
-  
+
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved. 
-          
-          <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>  Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a></p>
+          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+
+            <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
+            Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+          </p>
         </div>
       </div>
     </div>
@@ -475,6 +492,6 @@ https://templatemo.com/tm-579-cyborg-gaming
   <script src="assets/js/custom.js"></script>
 
 
-  </body>
+</body>
 
 </html>
