--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-7">
                 <div class="header-text">
-                  <h6>Welcome To Cyborg</h6>
-                  <h4><em>Browse</em> Our Popular Games Here</h4>
+                  <h6>Chọn giày, chọn phong cách tại</h6>
+                  <h4>Vũ trụ <em>Sneaker</em></h4>
                   <div class="main-button">
-                    <a href="browse.html">Browse Now</a>
+                    <a href="product.html">Mua ngay</a>
                   </div>
                 </div>
               </div>
@@ -110,7 +110,7 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Most Popular</em> Right Now</h4>
+                  <h4><em>Sản phẩm</em> phổ biến nhất</h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
@@ -214,7 +214,7 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4>Các <em>Bộ siêu tập</em></h4>
               </div>
               <div class="item">
                 <ul>
