--- a/product.html
+++ b/product.html
@@ -68,8 +68,8 @@ https://templatemo.com/tm-579-cyborg-gaming
             <!-- ***** Search End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Trang chủ</a></li>
-              <li><a href="product.html">Sản phẩm</a></li>
+              <li><a href="index.html">Trang chủ</a></li>
+              <li><a href="product.html" class="active">Sản phẩm</a></li>
               <li><a href="collection.html">Bộ sưu tập</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="cart.html">Giỏ hàng </a></li>
