--- a/collection.html
+++ b/collection.html
@@ -89,158 +89,179 @@ https://templatemo.com/tm-579-cyborg-gaming
       <div class="col-lg-12">
         <div class="page-content">
 
-          <!-- ***** Featured Start ***** -->
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="feature-banner header-text">
-                <div class="row">
-                  <div class="col-lg-4">
-                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
-                  </div>
-                  <div class="col-lg-8">
-                    <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i
-                          class="fa fa-play"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Featured End ***** -->
-
-          <!-- ***** Details Start ***** -->
-          <div class="game-details">
+          <!-- ***** Colection Start ***** -->
             <div class="row">
               <div class="col-lg-12">
-                <h2>Fortnite Details</h2>
-              </div>
-              <div class="col-lg-12">
-                <div class="content">
+                <div class="gaming-library header-text">
+                  <div class="heading-section">
+                    <h4>Các <em>Collections</em></h4>
+                  </div>
                   <div class="row">
-                    <div class="col-lg-6">
-                      <div class="left-info">
-                        <div class="left">
-                          <h4>Fortnite</h4>
-                          <span>Sandbox</span>
-                        </div>
-                        <ul>
-                          <li><i class="fa fa-star"></i> 4.8</li>
-                          <li><i class="fa fa-download"></i> 2.3M</li>
-                        </ul>
-                      </div>
+                    <div class="item" >
+                      <ul> 
+                        <li><img src="assets/images/sneaker_img/nike-logo.jpg" alt=""   class="templatemo-item"></li>
+                        <li>
+                          <h4>Nike</h4><span>Sneaker</span>
+                        </li>
+                        <li>
+                          <h4>Số lượng</h4><span>23</span>
+                        </li>
+                        <li>
+                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.8</span>
+                        </li>
+                    
+                        <li>
+                          <div class="main-border-button"><a href="#">Khám phá</a></div>
+                        </li>
+                      </ul>
                     </div>
-                    <div class="col-lg-6">
-                      <div class="right-info">
-                        <ul>
-                          <li><i class="fa fa-star"></i> 4.8</li>
-                          <li><i class="fa fa-download"></i> 2.3M</li>
-                          <li><i class="fa fa-server"></i> 36GB</li>
-                          <li><i class="fa fa-gamepad"></i> Action</li>
-                        </ul>
-                      </div>
+                    <div class="item">
+                      <ul>
+                        <li><img src="assets/images/sneaker_img/adidas-logo.jpg" alt="" class="templatemo-item"></li>
+                        <li>
+                          <h4>Adidas</h4><span>Sneaker</span>
+                        </li>
+                        <li>
+                          <h4>Số lượng</h4><span>34</span>
+                        </li>
+                        <li>
+                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>3.9</span>
+                        </li>
+                        <li>
+                          <div class="main-border-button"><a href="#">Khám phá</a></div>
+                        </li>
+                      </ul>
                     </div>
-                    <div class="col-lg-4">
-                      <img src="assets/images/details-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                    <div class="item">
+                      <ul>
+                        <li><img src="assets/images/sneaker_img/vans-logo.jpg" alt="" class="templatemo-item"></li>
+                        <li>
+                          <h4>Vans</h4><span>Sneaker</span>
+                        </li>
+                        <li>
+                          <h4>Số lượng</h4><span>28</span>
+                        </li>
+                        <li>
+                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.2</span>
+                        </li>
+                        <li>
+                          <div class="main-border-button"><a href="#">Khám phá</a></div>
+                        </li>
+                      </ul>
                     </div>
-                    <div class="col-lg-4">
-                      <img src="assets/images/details-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
-                    </div>
-                    <div class="col-lg-4">
-                      <img src="assets/images/details-03.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
-                    </div>
-                    <div class="col-lg-12">
-                      <p>Cyborg Gaming is free HTML CSS website template provided by TemplateMo. This is Bootstrap
-                        v5.2.0 layout. You can make a <a href="https://paypal.me/templatemo" target="_blank">small
-                          contribution via PayPal</a> to info [at] templatemo.com and thank you for supporting. If you
-                        want to get the PSD source files, please contact us. Lorem ipsum dolor sit consectetur es dispic
-                        dipiscingei elit, sed doers eiusmod lisum hored tempor.</p>
-                    </div>
-                    <div class="col-lg-12">
-                      <div class="main-border-button">
-                        <a href="#">Download Fortnite Now!</a>
-                      </div>
+                    <div class="item last-item">
+                      <ul>
+                        <li><img src="assets/images/sneaker_img/puma-logo.jpg" alt="" class="templatemo-item"></li>
+                        <li>
+                          <h4>Puma</h4><span>Sneaker</span>
+                        </li>
+                        <li>
+                          <h4>Số lượng</h4><span>25</span>
+                        </li>
+                        <li>
+                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.5</span>
+                        </li>
+                        <li>
+                          <div class="main-border-button"><a href="#">Khám phá</a></div>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- ***** Details End ***** -->
-
-          <!-- ***** Other Start ***** -->
-          <div class="other-games">
-            <div class="row">
-              <div class="col-lg-12">
+   
+          <!-- ***** Collection End ***** -->
+<br>
+           <!-- ***** Featured Games Start ***** -->
+           <div class="row">
+            <div class="col-lg-12">
+              <div class="featured-games header-text">
                 <div class="heading-section">
-                  <h4><em>Other Related</em> Games</h4>
+                  <h4>Các sản phẩm tiêu biểu của các <em>Collections</em></h4>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item">
-                  <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
-                  <h4>Dota 2</h4><span>Sandbox</span>
-                  <ul>
-                    <li><i class="fa fa-star"></i> 4.8</li>
-                    <li><i class="fa fa-download"></i> 2.3M</li>
-                  </ul>
+                <div class="owl-features owl-carousel">
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>BOOST</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 1,950,000 đ </li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>YEEZY</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 1,350,000 đ </li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/air-jordan-1-hi-trophy-room-chicago-da2728-100-king-shoes-sneaker-real-hcm-1624273272 (1).jpeg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>JORDAN</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 2,500,000 đ</li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/ci0919-117-giay-nike-air-force-1-shadow-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>AIR FORCE</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 1,850,000 đ</li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/ef1183-giày-adidas-alphaboost-chính-hãng-dến-king-shoes-1-1653289514.jpg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>ULTRABOOST</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 2,000,000 đ</li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <div class="thumb">
+                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg" alt="">
+                      <div class="hover-effect">
+                        <h6>Chi tiết</h6>
+                      </div>
+                    </div>
+                    <h4>NMD</h4>
+                    <ul>
+                      <li><i class="fa fa-star"></i> 4.8</li>
+                      <li><i class="fa fa-download"></i> 1,700,000 đ</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- ***** Other End ***** -->
-
         </div>
       </div>
     </div>
