--- a/collection.html
+++ b/collection.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-12">
                 <div class="gaming-library header-text">
                   <div class="heading-section">
-                    <h4>Các <em>Collections</em></h4>
+                    <h4>Các <em> Sneaker Collections</em></h4>
                   </div>
                   <div class="row">
                     <div class="item" >
@@ -178,7 +178,7 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="col-lg-12">
               <div class="featured-games header-text">
                 <div class="heading-section">
-                  <h4>Các sản phẩm tiêu biểu của các <em>Collections</em></h4>
+                  <h4>Sản phẩm nổi bật trong <em>Collections</em></h4>
                 </div>
                 <div class="owl-features owl-carousel">
                   <div class="item">
